# Orris

./: .gitignore  README.md  app.py  blog_summarizer.py  pyproject.toml  scrapingdog_tool.py
static/: github.soln  terminal steps.txt
