[project]
name = "job-hunter-agent"
version = "0.1.0"
description = "Automated job hunting & applying agent"
authors = [
    {name = "Kabshah", email = "iamkabshah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "requests",
    "beautifulsoup4",
    "langchain",
    "crewai",
    "streamlit",
    "faiss-cpu",
    "yagmail",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.183.0,<3.0.0)",
    "crewai-tools (>=0.73.1,<0.74.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "gradio (>=5.47.2,<6.0.0)",
    "elevenlabs (>=2.16.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
